[Diagnostics] Diagnose unresolved and typoed labels when using labeled break or continue statements inside loops (#21915)

Adds proper diagnostics when using unresolved labels on break statements inside loops. In case of simple typos, also provides suggestions and fixits. Right now, the misleading "error: 'break' is only allowed inside a loop, if, do, or switch" is emitted in 4.2 and master.

Resolves SR-9677.